# sigil

./: .gitignore  AGENTS.md  BIDIRECTIONAL_MIGRATION_COMPLETE.md  Cargo.toml  LICENSE  LOOPHOLE_FOUND.md  README.md  STATUS.md  compile-all.sh  manifest  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-canonical.sh  test-ffi-console.mint
.agents/plugins/: marketplace.json
.beads/: issues.jsonl
.claude/: settings.json  settings.local.json
.claude/agents/: sigil-pr-audit.md  technical-writer.md
.claude/commands/: pr-audit.md
.claude/skills/: sigil-pr-audit
.github/workflows/: ci.yml  release.yml  website.yml
compiler/: package.json
compiler/src/: cli.ts  index.ts
docs/: CANONICAL_ENFORCEMENT.md  STDLIB.md  philosophy.md  type-system.md
examples/: factorial.mint  factorial.mint.map  fibonacci.mint  fibonacci.mint.map  http-handler.mint  http-handler.mint.map  list-length.mint  list-operations.mint  list-reverse.mint  types.mint.map
language/: AGENTS.md  CLAUDE.md  GETTING_STARTED.md  LOOPHOLE_FOUND.md  README.md  STATUS.md  test-canonical.sh
language/benchmarks/: README.md  RESULTS.md  run-all.sh
language/compiler/: Cargo.toml  ERROR_CODES.md  README.md  package.json  test-http-client-server.sh  test-multimodule.sh  test-tcp-client-server.sh
language/compiler-rs/: Cargo.toml  FINAL-VERIFICATION.md  MIGRATION-COMPLETE.md  MIGRATION.md  README.md  STATUS-UPDATE.md  STATUS.md  verify-all-examples.sh  verify-examples.sh
language/compiler-rs/crates/sigil-ast/: Cargo.toml
language/compiler-rs/crates/sigil-ast/src/: declarations.rs  expressions.rs  lib.rs  patterns.rs  types.rs
language/compiler/.claude/agent-memory/technical-writer/: MEMORY.md
language/compiler/crates/sigil-ast/: Cargo.toml
language/compiler/crates/sigil-ast/src/: declarations.rs  expressions.rs  lib.rs  location.rs  patterns.rs  types.rs
language/compiler/crates/sigil-cli/: Cargo.toml  build.rs
language/compiler/crates/sigil-cli/src/: commands.rs  docs_support.rs  hash.rs  lib.rs  main.rs  module_graph.rs  package_manager.rs  project.rs
language/compiler/crates/sigil-cli/src/commands/: compile.rs  compile_support.rs  debug.rs  docs.rs  feature_flag.rs  init.rs  inspect.rs  legacy.rs  review.rs  shared.rs
language/compiler/crates/sigil-cli/tests/: compile_command.rs  debug_command.rs  docs_command.rs  docs_schema.rs  feature_flag_command.rs  init_command.rs  inspect_command.rs  package_command.rs  review_command.rs  run_command.rs  test_command.rs
language/compiler/crates/sigil-codegen/: Cargo.toml
language/compiler/crates/sigil-codegen/src/: lib.rs  span_map.rs
language/compiler/crates/sigil-diagnostics/: Cargo.toml
language/compiler/crates/sigil-diagnostics/src/: codes.rs  helpers.rs  lib.rs  types.rs
language/compiler/crates/sigil-lexer/src/: lexer_impl.rs  lib.rs  token.rs
language/compiler/crates/sigil-lexer/tests/: comprehensive.rs
language/compiler/crates/sigil-parser/: Cargo.toml
language/compiler/crates/sigil-parser/src/: error.rs  lib.rs  parser_impl.rs
language/compiler/crates/sigil-parser/tests/: comprehensive.rs
language/compiler/crates/sigil-solver/src/: lib.rs
language/compiler/crates/sigil-typechecker/: Cargo.toml
language/compiler/crates/sigil-typechecker/src/: bidirectional.rs  effects.rs  environment.rs  errors.rs  json_codec.rs  lib.rs  typed_ir.rs  types.rs
language/compiler/crates/sigil-typechecker/tests/: errors.rs  pipeline.rs  protocol_state.rs
language/compiler/crates/sigil-validator/: Cargo.toml
language/compiler/crates/sigil-validator/src/: branching_recursion.rs  canonical.rs  error.rs  lib.rs  printer.rs
language/compiler/crates/sigil-validator/tests/: comprehensive.rs
language/compiler/examples/: effect-demo.run.ts  effect-demo.ts  factorial.run.ts  factorial.ts
language/compiler/src/: api.ts  cli.ts  index.ts
language/compiler/src/codegen/: javascript.ts
language/compiler/src/diagnostics/: error.ts  helpers.ts  types.ts
language/compiler/src/lexer/: lexer.ts  token.ts
language/compiler/src/mapgen/: enhance.ts  extractor.ts  generator.ts  index.ts  types.ts  writer.ts
language/compiler/src/mutability/: errors.ts  index.ts  tracker.ts
language/compiler/src/parser/: ast.ts  index.ts  parser.ts
language/compiler/src/test-tailrec/: test16-gcd-allowed.js
language/compiler/src/typechecker/: bidirectional.ts  environment.ts  errors.ts  index.ts  types.ts
language/compiler/src/validator/: canonical.ts  extern-validator.ts  surface-form.ts
language/compiler/test/: canonical-validation.test.ts  cli-json-diagnostics.test.ts  module-system.test.ts  parser-errors.test.ts
language/compiler/test-fixtures/: test-async-ffi.run.ts  test-async-ffi.ts  test-async-list-ops.run.ts  test-async-list-ops.ts  test-async-pure.run.ts  test-async-pure.ts
language/compiler/test/parser/: single-variant-constructor.test.ts  tuple-types.test.ts
language/compiler/test/validator/: canonical-multiparam.test.ts  canonical-no-duplicates.test.ts
language/core/: map.lib.sigil  option.lib.sigil  prelude.lib.sigil  result.lib.sigil
language/docs/: ASYNC.md  CANONICAL_ENFORCEMENT.md  CANONICAL_FORMS.md  DEBUGGING.md  EMBEDDED_DOCS.md  FFI.md  PACKAGES.md  STDLIB.md  TESTING.md  TESTING_JSON_SCHEMA.md  mutability.md  philosophy.md  syntax-reference.md  topology.md  type-system.md  why-no-ide-tooling.md
language/examples/: 02-arithmetic.sigil  (+144 more)
projects/: AGENTS.md
scripts/: compare-json-outputs.sh
spec/: type-system.md
src/: binary_search.mint  factorial-invalid-helper.mint  factorial.mint  factorial.mint.map  hello.mint  palindrome.mint
stdlib/: io.mint  list-predicates.mint.map  list_ops.mint  list_predicates.mint  list_predicates.mint.map  numeric-predicates.mint.map  numeric_predicates.mint  numeric_predicates.mint.map  option.mint.map  result.mint  result.mint.map  test_list_predicates.mint  test_numeric_predicates.mint
tools/: checkBundledLanguageRoot.sh  checkCanonicalStdlibUsage.py  checkHomebrewFormula.sh  test_checkCanonicalStdlibUsage.py
website/: README.md  about-site.md  for-agents.md
(+896 files in other folders)
