[package]
name = "sigil-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
sigil-lexer = { path = "../sigil-lexer" }
sigil-parser = { path = "../sigil-parser" }
sigil-validator = { path = "../sigil-validator" }
sigil-typechecker = { path = "../sigil-typechecker" }
sigil-codegen = { path = "../sigil-codegen" }
sigil-ast = { path = "../sigil-ast", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.10"
