[package]
name = "sigil-codegen"
version = "0.1.0"
edition = "2021"

[features]
default = ["vendored-z3"]
vendored-z3 = ["sigil-typechecker/vendored-z3"]

[dependencies]
sigil-ast = { path = "../sigil-ast" }
sigil-lexer = { path = "../sigil-lexer" }
sigil-parser = { path = "../sigil-parser" }
sigil-typechecker = { path = "../sigil-typechecker", default-features = false }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
